Stable commit dor Select

--- a/src/components/Menu/Menu.scss
+++ b/src/components/Menu/Menu.scss
@@ -1,6 +1,6 @@
 @import "../../tokens/build/scss/variables.scss";
 
-.navi-menu-component {
+// .navi-menu-component {
   .navi-menu-item-list-item {
     padding: 4px 8px;
   }
@@ -63,4 +63,4 @@
     background: $color-secondary-50;
     color: $color-secondary-600;
   }
-}
+// }
