--- a/src/components/Menu/Input/Input.scss
+++ b/src/components/Menu/Input/Input.scss
@@ -1,4 +1,4 @@
-@import "../../tokens/build/scss/variables.scss";
+@import "../../../tokens/build/scss/variables.scss";
 /* cyrillic-ext */
 
 .navi-input-container {
