--- a/src/components/Select/Select.scss
+++ b/src/components/Select/Select.scss
@@ -1,12 +1,65 @@
-@import "../../TokensOld/base-tokens/typography-token.scss";
+@import "../../tokens/build/scss/variables.scss";
 
-.foo-bar {
-  font-family: map-get($text-heading-05, "font-family");
-  font-size: map-get($text-heading-05, "font-size");
-  font-weight: map-get($text-heading-05, "font-weight");
-  line-height: map-get($text-heading-05, "line-height");
-}
+// .navi-menu-component {
+  .navi-menu-item-list-item {
+    padding: 4px 8px;
+  }
+  .navi-menu-item-list-item:hover {
+    background-color: $color-secondary-50;
+  }
+  .navi-item-selected {
+    background-color: $color-info-50;
+  }
+  .navi-item-selected:hover {
+    background-color: $color-info-50;
+  }
 
-.auto-complete-input {
-  border: 1px solid #ff0000
-}
+  .navi-menu-item-list-item-content {
+    padding: 4px 8px;
+    display: flex;
+    width: 100%;
+    align-items: stretch;
+    // Color for the SVG
+    color: $color-secondary-600;
+  }
+
+  .navi-menu-item-checkbox-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-right: 12px;
+  }
+
+  .navi-menu-item-avatar-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-right: 12px;
+  }
+  .navi-menu-item-right-icon-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-left: 12px;
+  }
+  .navi-menu-item-left-icon-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-right: 12px;
+  }
+
+  .navi-menu-item-text-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 4px 0;
+    flex-grow: 1;
+  }
+
+  .avatar-component {
+    width: 38px;
+    height: 38px;
+    background: $color-secondary-50;
+    color: $color-secondary-600;
+  }
