MenuItem with select

--- a/src/components/MenuItem/MenuItem.scss
+++ b/src/components/MenuItem/MenuItem.scss
@@ -1,18 +1,58 @@
-@import "../../TokensOld/base-tokens/typography-token.scss";
-
 .navi-menu-list-item {
   &:hover {
     background-color: transparent;
   }
+
   .no-hover {
     background-color: transparent;
   }
+
   .MuiListItem-button:hover {
     background-color: transparent;
   }
 }
 
 .navi-menu-container {
+  .navi-menu-list-item {
+    padding: 0px;
+
+    .navi-item-selected {
+      background-color: #f0f9ff;
+
+      &:hover {
+        background-color: #f0f9ff;
+      }
+    }
+
+    .navi-icon-selected {
+      svg {
+        color: #0975d7;
+      }
+    }
+
+    .navi-menu-item-action-icon-large {
+      svg {
+        height: 20px;
+        width: 20px;
+        color: #6b697b;
+      }
+    }
+
+    .navi-menu-item-action-icon-small {
+      height: 16px;
+      width: 16px;
+      color: #6b697b;
+    }
+  }
+
+  .descriptive-small {
+    height: 52px;
+  }
+
+  .descriptive-large {
+    height: 62px;
+  }
+
   .text-only-small {
     height: 32px;
     font-family: "Inter";
@@ -31,16 +71,6 @@
     font-weight: 400;
     font-size: 14px;
     line-height: 20px;
-  }
-
-  .bulk-action-small {
-    height: 32px;
-    min-height: 32px;
-  }
-
-  .bulk-action-large {
-    height: 44px;
-    min-height: 32px;
   }
 
   .group-heading-small {
@@ -81,6 +111,7 @@
     line-height: 20px;
     color: #6b697b;
   }
+
   .empty-small {
     height: "32px";
     min-height: "32px";
