--- a/src/components/Input/Input.scss
+++ b/src/components/Input/Input.scss
@@ -30,9 +30,15 @@
     outline: none;
     outline: $input-type-default-outline;
     border-radius: $input-type-root-border-radius;
+    display: flex;
+    // flex-wrap: wrap;
+    height: unset!important;
 
     .MuiSelect-root {
-      padding: $input-type-root-padding;
+      padding: $input-type-root-select-padding;
+    }
+    .MuiSelect-root:focus {
+      background-color: unset;
     }
   }
 
