--- a/src/components/Menu/Menu.scss
+++ b/src/components/Menu/Menu.scss
@@ -1,5 +1,4 @@
-@import "../../TokensOld/base-tokens/typography-token.scss";
-
+@import "../../tokens/build/scss/variables.scss";
 .navi-menu-list-item {
   &:hover {
     background-color: transparent;
@@ -18,14 +17,14 @@
   }
 
   .navi-item-selected {
-    background-color: #f0f9ff;
+    background-color: $menu-selected-background-color;
     &:hover {
-      background-color: #f0f9ff;
+      background-color: $menu-selected-background-color;
     }
 
     .navi-icon-selected {
       svg {
-        color: #0975d7;
+        color: $menu-selected-icon-color;
       }
     }
   }
