--- a/src/navi/components/TextField/TextField.scss
+++ b/src/navi/components/TextField/TextField.scss
@@ -1,12 +1,17 @@
 @import "../../tokens/build/scss/variables.scss";
 /* cyrillic-ext */
 
-.navi-input-container {
+.navi-text-field-container {
   .MuiInput-underline:hover {
     border-bottom: none;
   }
 
   .MuiInput-underline:hover:not(.Mui-disabled):before {
+    border-bottom: none;
+  }
+
+  // Hide the dashed border bottom in disabled input
+  .MuiInput-underline.Mui-disabled:before {
     border-bottom: none;
   }
 
@@ -18,63 +23,26 @@
     border-bottom: none;
   }
 
-  .MuiInputBase-root {
-    padding: $input-type-root-padding;
-    outline: $input-type-default-outline;
-    border-radius: $input-type-root-border-radius;
+  .MuiAutocomplete-inputRoot[class*="MuiInput-root"] {
+    padding: 0.75rem 1rem;
   }
 
-  // Input style when used for Select component
-  .navi-select-input-container {
+  .navi-autocomplete-input {
     padding: 0;
-    outline: none;
+  }
+
+  .MuiAutocomplete-inputRoot[class*="MuiInput-root"] .MuiAutocomplete-input {
+  }
+
+  .MuiAutocomplete-inputRoot[class*="MuiInput-root"] .MuiAutocomplete-input:first-child {
+  }
+
+
+  .MuiInputBase-root {
+    padding: 0.75rem 1rem 0.75rem 1rem;
+    padding-bottom: 0.75rem;
     outline: $input-type-default-outline;
     border-radius: $input-type-root-border-radius;
-    height: unset !important;
-
-    &.large {
-      padding: 12px 0;
-    }
-    &.small {
-      padding: 8px 0;
-    }
-    .MuiSelect-root {
-      padding: $input-type-root-select-padding;
-    }
-    .MuiSelect-root:focus {
-      background-color: unset;
-    }
-
-    .MuiSelect-select {
-      overflow-y: auto;
-      mask-image: linear-gradient(to top, transparent, black),
-        linear-gradient(to left, transparent 17px, black 17px);
-      mask-size: 100% 20000px;
-      mask-position: left bottom;
-      -webkit-mask-image: linear-gradient(to top, transparent, black),
-        linear-gradient(to left, transparent 17px, black 17px);
-      -webkit-mask-size: 100% 20000px;
-      -webkit-mask-position: left bottom;
-      transition: mask-position 0.3s, -webkit-mask-position 0.3s;
-    }
-
-    .MuiSelect-select:hover {
-      -webkit-mask-position: left top;
-    }
-
-    @keyframes background {
-      from {
-        background: pink;
-      }
-      to {
-        background: #c0d6ff;
-      }
-    }
-
-    .wrapper {
-      float: left;
-      animation: background 5s infinite alternate;
-    }
   }
 
   .input-label {
@@ -118,7 +86,7 @@
     word-break: $input-label-error-word-break;
   }
 
-  .base-input {
+  .base-input .MuiInputBase-root {
     box-sizing: $input-type-root-box-sizing;
     background-color: $input-type-root-background-color;
     border-radius: $input-type-root-border-radius;
@@ -133,8 +101,17 @@
     }
   }
 
+  // Styles to show Active state for Input
+  .base-input .MuiInputBase-root.Mui-focused {
+    outline: $input-type-focus-border;
+
+    &:hover {
+      outline: $input-type-focus-border;
+    }
+  }
+
   .large {
-    height: $input-size-large-height;
+    height: unset;
     font-size: $input-size-large-font-size;
     line-height: $input-size-large-line-height;
 
@@ -149,7 +126,7 @@
   }
 
   .small {
-    height: $input-size-small-height;
+    height: unset;
     font-size: $input-size-small-font-size;
     line-height: $input-size-small-line-height;
 
@@ -163,7 +140,7 @@
     }
   }
 
-  .disabled {
+  .disabled .MuiInputBase-root {
     outline: $input-type-disabled-outline;
     background-color: $input-type-disabled-background-color;
     font-family: $input-type-disabled-font-family;
@@ -194,7 +171,7 @@
     }
   }
 
-  .critical {
+  .critical .MuiInputBase-root {
     outline: $input-type-error-outline;
 
     &:hover {
@@ -207,4 +184,72 @@
     color: $input-type-read-only-color;
     outline: $input-type-read-only-outline;
   }
+
+  // Styles to show Active state for Input
+  .Mui-focused {
+    outline: $input-type-focus-border;
+
+    &:hover {
+      outline: $input-type-focus-border;
+    }
+  }
 }
+
+// Input style when used for Select component
+// .navi-select-input-container {
+//   .base-input {
+//     padding: 0;
+//     outline: none;
+//     outline: $input-type-default-outline;
+//     border-radius: $input-type-root-border-radius;
+//     height: unset !important;
+//   }
+
+//   &.large {
+//     padding: 12px 0;
+//   }
+
+//   &.small {
+//     padding: 8px 0;
+//   }
+
+//   .MuiSelect-root {
+//     padding: $input-type-root-select-padding;
+//   }
+
+//   .MuiSelect-root:focus {
+//     background-color: unset;
+//   }
+
+//   .MuiSelect-select {
+//     overflow-y: auto;
+//     mask-image: linear-gradient(to top, transparent, black),
+//       linear-gradient(to left, transparent 17px, black 17px);
+//     mask-size: 100% 20000px;
+//     mask-position: left bottom;
+//     -webkit-mask-image: linear-gradient(to top, transparent, black),
+//       linear-gradient(to left, transparent 17px, black 17px);
+//     -webkit-mask-size: 100% 20000px;
+//     -webkit-mask-position: left bottom;
+//     transition: mask-position 0.3s, -webkit-mask-position 0.3s;
+//   }
+
+//   .MuiSelect-select:hover {
+//     -webkit-mask-position: left top;
+//   }
+
+//   @keyframes background {
+//     from {
+//       background: pink;
+//     }
+
+//     to {
+//       background: #c0d6ff;
+//     }
+//   }
+
+//   .wrapper {
+//     float: left;
+//     animation: background 5s infinite alternate;
+//   }
+// }
