--- a/src/navi/components/Input/Input.scss
+++ b/src/navi/components/Input/Input.scss
@@ -2,82 +2,31 @@
 /* cyrillic-ext */
 
 .navi-input-container {
-  .MuiInput-underline:hover {
-    border-bottom: none;
-  }
 
-  .MuiInput-underline:hover:not(.Mui-disabled):before {
-    border-bottom: none;
-  }
-
-  .MuiInput-underline:before {
-    border-bottom: none;
-  }
-
-  .MuiInput-underline:after {
-    border-bottom: none;
-  }
-
-  .MuiInputBase-root {
+  .navi-text-input-base {
     padding: $input-type-root-padding;
     outline: $input-type-default-outline;
     border-radius: $input-type-root-border-radius;
   }
 
-  // Input style when used for Select component
-  .navi-select-input-container {
-    padding: 0;
-    outline: none;
-    outline: $input-type-default-outline;
-    border-radius: $input-type-root-border-radius;
-    height: unset !important;
-
-    &.large {
-      padding: 12px 0;
-    }
-    &.small {
-      padding: 8px 0;
-    }
-    .MuiSelect-root {
-      padding: $input-type-root-select-padding;
-    }
-    .MuiSelect-root:focus {
-      background-color: unset;
-    }
-
-    .MuiSelect-select {
-      overflow-y: auto;
-      mask-image: linear-gradient(to top, transparent, black),
-        linear-gradient(to left, transparent 17px, black 17px);
-      mask-size: 100% 20000px;
-      mask-position: left bottom;
-      -webkit-mask-image: linear-gradient(to top, transparent, black),
-        linear-gradient(to left, transparent 17px, black 17px);
-      -webkit-mask-size: 100% 20000px;
-      -webkit-mask-position: left bottom;
-      transition: mask-position 0.3s, -webkit-mask-position 0.3s;
-    }
-
-    .MuiSelect-select:hover {
-      -webkit-mask-position: left top;
-    }
-
-    @keyframes background {
-      from {
-        background: pink;
-      }
-      to {
-        background: #c0d6ff;
-      }
-    }
-
-    .wrapper {
-      float: left;
-      animation: background 5s infinite alternate;
-    }
+  .navi-text-input-base::after {
+    border-bottom: none;
   }
 
-  .input-label {
+  .navi-text-input-base::before {
+    border-bottom: none;
+  }
+
+  .navi-text-input-base:hover:not(.Mui-disabled):before {
+    border-bottom: none;
+  }
+
+  // Hide the dashed border bottom in disabled input
+  .navi-text-input-base.navi-disabled:before {
+    border-bottom: none;
+  }
+
+  .navi-input-label {
     font-size: $input-label-base-font-size;
     font-family: $input-label-base-font-family;
     line-height: $input-label-base-line-height;
@@ -88,7 +37,7 @@
     color: $input-label-base-color;
   }
 
-  .helper-text {
+  .navi-helper-text {
     margin-top: $input-label-helper-margin-top;
     line-height: $input-label-helper-line-height;
     font-size: $input-label-helper-font-size;
@@ -98,7 +47,7 @@
     word-break: $input-label-helper-word-break;
   }
 
-  .success-message {
+  .navi-success-message {
     margin-top: $input-label-success-margin-top;
     line-height: $input-label-success-line-height;
     font-size: $input-label-success-font-size;
@@ -108,7 +57,7 @@
     word-break: $input-label-success-word-break;
   }
 
-  .error-message {
+  .navi-error-message {
     margin-top: $input-label-error-margin-top;
     line-height: $input-label-error-line-height;
     font-size: $input-label-error-font-size;
@@ -118,7 +67,7 @@
     word-break: $input-label-error-word-break;
   }
 
-  .base-input {
+  .navi-base-input {
     box-sizing: $input-type-root-box-sizing;
     background-color: $input-type-root-background-color;
     border-radius: $input-type-root-border-radius;
@@ -133,7 +82,7 @@
     }
   }
 
-  .large {
+  .navi-large {
     height: $input-size-large-height;
     font-size: $input-size-large-font-size;
     line-height: $input-size-large-line-height;
@@ -148,7 +97,7 @@
     }
   }
 
-  .small {
+  .navi-small {
     height: $input-size-small-height;
     font-size: $input-size-small-font-size;
     line-height: $input-size-small-line-height;
@@ -163,30 +112,19 @@
     }
   }
 
-  .disabled {
-    outline: $input-type-disabled-outline;
-    background-color: $input-type-disabled-background-color;
-    font-family: $input-type-disabled-font-family;
-    font-style: $input-type-disabled-font-style;
-
-    &:hover {
-      outline: $input-type-disabled-outline;
-    }
-  }
-
-  .empty-field {
+  .navi-empty-field {
     &:hover {
       background-color: $input-type-root-background-color;
     }
   }
 
-  .filled-field {
+  .navi-filled-field {
     &:hover {
       background-color: $input-type-hover-background-color;
     }
   }
 
-  .success {
+  .navi-success {
     outline: $input-type-success-outline;
 
     &:hover {
@@ -194,7 +132,7 @@
     }
   }
 
-  .critical {
+  .navi-critical {
     outline: $input-type-error-outline;
 
     &:hover {
@@ -202,9 +140,74 @@
     }
   }
 
-  .read-only {
+  .navi-read-only {
     background-color: $input-type-read-only-background-color;
     color: $input-type-read-only-color;
     outline: $input-type-read-only-outline;
+  }
+
+  // Styles to show Active state for Input
+  .navi-focused {
+    outline: $input-type-focus-border;
+
+    &:hover {
+      outline: $input-type-focus-border;
+    }
+  }
+
+  .navi-disabled {
+    outline: $input-type-disabled-outline;
+    background-color: $input-type-disabled-background-color;
+    font-family: $input-type-disabled-font-family;
+    font-style: $input-type-disabled-font-style;
+
+    &:hover {
+      outline: $input-type-disabled-outline;
+      background-color: $input-type-disabled-background-color;
+    }
+  }
+}
+
+// Input style when used for Select component
+.navi-select-input-container {
+  .navi-base-input {
+    padding: 0;
+    outline: none;
+    outline: $input-type-default-outline;
+    border-radius: $input-type-root-border-radius;
+    height: unset !important;
+  }
+
+  &.navi-large {
+    padding: 12px 0;
+  }
+
+  &.navi-small {
+    padding: 8px 0;
+  }
+
+  .navi-text-input-input {
+    padding: $input-type-root-select-padding;
+  }
+
+  .navi-text-input-input:focus {
+    background-color: unset;
+  }
+
+  .navi-focused {
+    outline: $input-type-hover-outline;
+
+    &:hover {
+      outline: $input-type-hover-outline;
+    }
+  }
+
+  // Styles to show Active state for Input
+  .navi-select-focused {
+    outline: $input-type-focus-border;
+
+    &:hover {
+      outline: $input-type-focus-border;
+    }
   }
 }
