--- a/src/navi/components/Select/Select.scss
+++ b/src/navi/components/Select/Select.scss
@@ -60,10 +60,13 @@
   }
 }
 
-.navi-select-with-scroll:hover {
-  overflow-y: scroll;
+.navi-select-scroll-container {
+  overflow: auto;
+  visibility: hidden;
 }
 
-.navi-select-with-scroll {
-  overflow: hidden;
+.navi-select-scroll-content,
+.navi-select-scroll-container:hover,
+.navi-select-scroll-container:focus {
+  visibility: visible;
 }
