--- a/src/navi/components/Input/Input.scss
+++ b/src/navi/components/Input/Input.scss
@@ -192,8 +192,10 @@
     padding: 8px 0;
   }
 
-  .navi-text-input-input {
-    padding: $input-type-root-select-padding;
+  .navi-text-input-base {
+    .navi-text-input-input {
+      padding: 0 0 0 0.75rem;
+    }
   }
 
   .navi-text-input-input:focus {
